--- a/Заметки/Заметки.md
+++ b/Заметки/Заметки.md
@@ -67,8 +67,37 @@ services:
         - "8085:8080"
       depends_on:
         - kafka
+```
 
 
-
+```text
+  messaging_service:
+    build: .
+    container_name: messaging_service
+    depends_on:
+      - cassandra
+      - kafka
+      - jaeger
+    environment:
+      SERVER_PORT: 8081
+      # Cassandra
+      CASSANDRA_URL: cassandra
+      # Kafka
+      KAFKA_BROKERS: kafka:9092
+      # Jaeger
+      JAEGER_URL: http://jaeger:14268/api/traces
+      # JWT Secret
+      JWT_SECRET: salt_secret
+    ports:
+      - "8081:8081"
 
 ```
+
+
+# Дописать микросервис обмена сообщениями
+
+- ## WebSocket HUB 
+- ## Разобраться с работой Cassandra
+- ## Jaeger Изучить более подробнее
+- ## Макет для сайта создать/найти 
+- ## 
